--- a/SeleniumNUnitParam/packages.config
+++ b/SeleniumNUnitParam/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="NUnit" version="3.6.0" targetFramework="net452" />
+  <package id="NUnit" version="2.6.0.12054" targetFramework="net452" />
+  <package id="NUnit.Runners.Net4" version="2.6.4" targetFramework="net452" />
   <package id="Selenium.WebDriver" version="3.0.1" targetFramework="net452" />
   <package id="Selenium.WebDriver.ChromeDriver" version="2.27.0" targetFramework="net452" />
   <package id="SpecFlow" version="2.1.0" targetFramework="net452" />
